tests/invalid/extern_decl.ri
extern (C) {
    pub fn abort() void; // OK
}

mod module {
    extern pkg oreo; // FAIL
    extern (C) {
        fn abort() void; // OK
    }
}

extern (C) fn sss() void { } // OK
